...
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_category_view">CategoryViewActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="loading_text">The News is loading...</string>
    <string name="title_activity_web">WebActivity</string>
...
