...
        android:layout_marginLeft="26dp"
        android:id="@+id/settings_theme_text"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_theme"
        android:layout_centerVertical="true"
        android:theme="@style/Color1SwitchStyle"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"/>

...
        android:layout_marginLeft="26dp"
        android:id="@+id/settings_notification"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_notification"
        android:layout_centerVertical="true"
        android:theme="@style/Color1SwitchStyle"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"/>

    </RelativeLayout>
...
