...
            android:layout_centerVertical="true"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@android:color/white"
            android:title="@string/app_title"/>

        <ImageButton
            android:id="@+id/options_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="10dp"
...
