<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.ivonneortega.the_news_project.mainActivity.fragments.FragmentTopStories">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/top_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:clipToPadding="false"
            android:layout_height="wrap_content"
            android:id="@+id/top_stories_recycler_view"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</FrameLayout>
